--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "marked": "^12.0.0",
     "plyr-react": "^5.3.0",
     "preact": "^10.19.5",
+    "react-intersection-observer": "^9.8.0",
     "react-player": "^2.14.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
