--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "plyr-react": "^5.3.0",
     "preact": "^10.19.5",
     "react-intersection-observer": "^9.8.0",
-    "react-player": "^2.14.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
@@ -35,7 +34,8 @@
     "autoprefixer": "^10.4.17",
     "prettier": "^3.2.4",
     "prettier-plugin-astro": "^0.13.0",
-    "prettier-plugin-tailwindcss": "^0.5.11"
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "prop-types": "^15.8.1"
   },
   "overrides": {
     "react": "npm:@preact/compat@latest",
