--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "plyr-react": "^5.3.0",
     "preact": "^10.19.5",
     "react-intersection-observer": "^9.8.0",
+    "react-spinners": "^0.13.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
