--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fontsource-variable/open-sans": "^5.0.23",
     "@fontsource-variable/source-sans-3": "^5.0.19",
     "astro": "^4.2.6",
+    "luxon": "^3.4.4",
     "marked": "^12.0.0",
     "plyr-react": "^5.3.0",
     "preact": "^10.19.5",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/luxon": "^3.4.2",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.17",
