--- a/package.json
+++ b/package.json
@@ -19,28 +19,27 @@
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/open-sans": "^5.0.23",
     "@fontsource-variable/source-sans-3": "^5.0.19",
-    "astro": "^4.2.6",
-    "luxon": "^3.4.4",
-    "marked": "^12.0.0",
-    "plyr-react": "^5.3.0",
-    "preact": "^10.19.5",
-    "react-intersection-observer": "^9.8.0",
-    "react-spinners": "^0.13.8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
-  },
-  "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@types/luxon": "^3.4.2",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "astro": "^4.2.6",
     "autoprefixer": "^10.4.17",
+    "luxon": "^3.4.4",
+    "marked": "^12.0.0",
+    "plyr-react": "^5.3.0",
+    "preact": "^10.19.5",
     "prettier": "^3.2.4",
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "prop-types": "^15.8.1"
+    "prop-types": "^15.8.1",
+    "react-intersection-observer": "^9.8.0",
+    "react-spinners": "^0.13.8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   },
+  "devDependencies": {},
   "overrides": {
     "react": "npm:@preact/compat@latest",
     "react-dom": "npm:@preact/compat@latest"
