--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
-[[redirects]]
-from = "/ob"
-to = "https://www.indiegogo.com/projects/bradley-burgess-the-orgelbuchlein/#/"
-status = 302
+# [[redirects]]
+# from = "/ob"
+# to = "https://www.indiegogo.com/projects/bradley-burgess-the-orgelbuchlein/#/"
+# status = 302
