--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "prop-types": "^15.8.1",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.14.1",
     "react-spinners": "^0.15.0",
     "tailwindcss": "^3.4.17",
